syntax = "proto3";

package sf.ethereum.block_meta.v1;

message BlockMeta {
  string hash = 1;
  uint64 number = 2;
  string timestamp = 3;
  uint64 gas_used = 4;
  string base_fee_per_gas = 5;
}
